# lyrics

./: .gitignore  Cargo.toml  README.md  run.sh
.idx/: dev.nix
src/: clientry.rs  macros.rs  main.rs  mxm.rs  spinner.rs
src/any/: macros.rs  mod.rs  mxm.rs  uagent.rs
src/bot/: irc.rs  mod.rs  twitch.rs
src/cli/: mod.rs
