[package]
name = "lyrics"
version = "0.1.0"
authors = ["Brandon Piesch <klapptnot@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
fancy-regex = "0.13.0"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["blocking"] }
serde = "1.0.202"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["derive"] }
